@@ -1,3 +1,7 @@
+2007-04-21  Brian Matherly  <brian@gramps-project.org>
+	* src/Filters/Rules/Person/_IsBookmarked.py:
+	  0000970: _IsBookmarked.py causes crash
+
 2007-04-20  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: fix calendar parsing
 	* src/GrampsDb/_WriteGedcom.py: fix calendar generation
